--- a/resources-service/pom.xml
+++ b/resources-service/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>service-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
