--- a/feed-service/src/main/resources/application.yml
+++ b/feed-service/src/main/resources/application.yml
@@ -8,6 +8,8 @@ spring:
     password:
   main:
     allow-bean-definition-overriding: true
+  application:
+    name: feed-service
 
 eureka:
   instance:
