--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
     show-sql: false
   main:
     allow-bean-definition-overriding: true
+  application:
+    name: user-service
 
 eureka:
   instance:
