--- a/wext-service/src/main/resources/application.yml
+++ b/wext-service/src/main/resources/application.yml
@@ -4,6 +4,15 @@ server:
 logging:
   level:
     root: info
+#    org:
+#      hibernate:
+#        SQL: debug
+#        type:
+#          descriptor:
+#            sql:
+#              BasicBinder: TRACE
+    com:
+      wext: info
 
 spring:
   redis:
@@ -14,8 +23,6 @@ spring:
     url: jdbc:mysql://localhost:3306/wext_db
     username: root
     password:
-  jpa:
-    show-sql: true
   main:
     allow-bean-definition-overriding: true
   #  profiles:
